# acpp20-302_exercises

./: .gitignore  README.md
.github/workflows/: build-host-23.yaml  build-host.yaml
examples/12_coroutines/src/: main.cpp
examples/13_modules/: CMakeLists.txt
examples/13_modules/alarm/: CMakeLists.txt  alarm.cpp  alarm.ixx
examples/13_modules/alarm-partitions/: CMakeLists.txt  alarm-base.cpp  main.cpp
examples/13_modules/cmake-alarm/: CMakeLists.txt  CMakePresets.json
examples/13_modules/cmake-alarm/src/: handler.cpp  handler.ixx
examples/13_modules/greet/: CMakeLists.txt  greet.cpp  greet.ixx
examples/13_modules/morning/: CMakeLists.txt  morning.ixx
examples/13_modules/src-alarm/: Modules.txt  main.cpp
examples/13_modules/src-alarm-partitions/: Modules.txt  alarm-base.cpp  alarm-base.ixx  alarm-extra.cpp  alarm-extra.ixx  alarm-helper.cpp  alarm-helper.ixx  alarm.ixx
examples/13_modules/src-greet/: main.cpp
examples/13_modules/src-morning/: evening.ixx  main.cpp
examples/13_modules/src-templates/: alarm.ixx  constraints.ixx  main.cpp  templates.ixx
examples/13_modules/templates/: CMakeLists.txt  Modules.txt  alarm.cpp
exercises/solutions/01_language_features/src/: Measurement.h  Measurements.h  main.cpp
exercises/solutions/02_vocabulary_types/src/: Measurement.h  Measurements.h  main.cpp
exercises/solutions/03_comparing_objects/src/: Measurement.h  main.cpp
exercises/solutions/03_templates/src/: main.cpp
exercises/solutions/04_comparing_objects/src/: Measurements.h  main.cpp
exercises/solutions/04_templates/src/: Measurements.h
exercises/solutions/05_requirements/src/: MeasurementType.h  Measurements.h  main.cpp
exercises/solutions/06_concepts/src/: Constraints.h  Measurements.h  main.cpp
exercises/solutions/07_ranges_views/src/: Constraints.h  Measurements.h  main.cpp
exercises/solutions/08_pmr/src/: Constraints.h  MeasurementType.h  main.cpp
exercises/solutions/09_coroutines/src/: Measurements.h  main.cpp
exercises/solutions/10_modules/: CMakeLists.txt
exercises/solutions/10_modules/include/: Generator.h
exercises/solutions/10_modules/src/: CMakeLists.txt  Constraints.h  Measurement.ixx  MeasurementType.ixx  Measurements.ixx  Modules.txt  main.cpp
exercises/templates/datalogger/src/: Measurement.h  MeasurementType.h  main.cpp
workspaces/host-clang/: CMakeLists.txt  README.md  build.sh  toolchain-clang.cmake
workspaces/host-gcc/: CMakeLists.txt  CMakePresets.json  README.md  build-one.sh  build.sh
workspaces/host-gcc/src/: main.cpp
workspaces/host-msvc/: CMakeLists.txt  CMakeSettings.json
workspaces/host-msvc/include/: Generator.h
workspaces/host-msvc/src/: main.cpp
